# Azure-DevOps-AI-Agent

./: .bandit  .copilot-instructions.md  .env.backend.example  .env.docker.example  .env.example  .env.frontend.example  .env.test  .gitignore  APP_INSIGHTS_FIX.md  DISABLE_AUTH_GUIDE.md  DOCKER_COMPOSE.md  DOCKER_COMPOSE_QUICK_REF.md  MFA_FIX_SUMMARY.md  MFA_IMPLEMENTATION_GUIDE.md  README.md  SCOPE_FIX_SUMMARY.md  bandit-report.json  debug_app.py  docker-compose.yml
src/backend/: .dockerignore  .env.test  Dockerfile  bandit-report.json  pyproject.toml  requirements-dev.txt  requirements.txt  test-results.xml
src/backend/app/: __init__.py  main.py
src/backend/app/api/: auth.py  chat.py  projects.py  workitems.py
src/backend/app/core/: config.py  dependencies.py  telemetry.py
src/backend/app/examples/: __init__.py  telemetry_examples.py
src/backend/app/middleware/: error_handlers.py  security.py
src/backend/app/models/: auth.py  chat.py  projects.py  workitems.py
src/backend/app/services/: auth_service.py
src/backend/dotnet/: .gitignore  AzureDevOpsAI.sln  Dockerfile  chat-message-tests.http
src/backend/dotnet/AzureDevOpsAI.Backend/: AzureDevOpsAI.Backend.csproj  AzureDevOpsAI.Backend.http  Program.cs  appSettings.json.example
src/backend/dotnet/AzureDevOpsAI.Backend.Tests/: AzureDevOpsAI.Backend.Tests.csproj  HealthCheckTests.cs  TestWebApplicationFactory.cs
src/backend/dotnet/AzureDevOpsAI.Backend.Tests/Configuration/: ApplicationInsightsLoggingTests.cs  ApplicationInsightsTests.cs  AzureOpenAIConfigurationTests.cs  LoggingConfigurationTests.cs  LoggingIntegrationTests.cs  ProgramRefactoringTests.cs
src/backend/dotnet/AzureDevOpsAI.Backend.Tests/Integration/: OBOFlowIntegrationTest.cs  OBOFlowValidationTest.cs
src/backend/dotnet/AzureDevOpsAI.Backend.Tests/Middleware/: ErrorHandlingMiddlewareMfaTests.cs
src/backend/dotnet/AzureDevOpsAI.Backend.Tests/Models/: MfaChallengeExceptionTests.cs  ProjectModelsJsonTests.cs
src/backend/dotnet/AzureDevOpsAI.Backend.Tests/Plugins/: GroupsPluginTests.cs  ProjectPluginTests.cs  RepositoryPluginTests.cs  SubjectQueryPluginTests.cs  UserEntitlementPluginTests.cs  UsersPluginTests.cs
src/backend/dotnet/AzureDevOpsAI.Backend.Tests/Services/: AIServiceTests.cs  AzureDevOpsApiServiceTests.cs  ChatHistoryReducerTests.cs  CosmosDbServiceTests.cs  ProjectPluginOBOFlowTests.cs  UserAuthenticationContextTests.cs
src/backend/dotnet/AzureDevOpsAI.Backend/Configuration/: AppSettings.cs
src/backend/dotnet/AzureDevOpsAI.Backend/Configuration/ServiceCollectionExtensions/: AIServicesExtensions.cs  ApplicationInsightsExtensions.cs  ApplicationServicesExtensions.cs  AuthenticationExtensions.cs  AzureDevOpsExtensions.cs  CosmosDbExtensions.cs  EndpointExtensions.cs  HealthCheckExtensions.cs  LoggingExtensions.cs  MiddlewareExtensions.cs  SettingsExtensions.cs  SwaggerExtensions.cs
src/backend/dotnet/AzureDevOpsAI.Backend/Endpoints/: ChatEndpoints.cs  ProjectEndpoints.cs  WorkItemEndpoints.cs
src/backend/dotnet/AzureDevOpsAI.Backend/HealthChecks/: AzureOpenAIHealthCheck.cs  CosmosDbHealthCheck.cs
src/backend/dotnet/AzureDevOpsAI.Backend/Middleware/: ErrorHandlingMiddleware.cs  SecurityMiddleware.cs
src/backend/dotnet/AzureDevOpsAI.Backend/Models/: ChatModels.cs  CosmosDbModels.cs  GroupModels.cs  MfaChallengeException.cs  ProjectModels.cs  RepositoryModels.cs  SubjectQueryModels.cs  UserModels.cs  WorkItemModels.cs
src/backend/dotnet/AzureDevOpsAI.Backend/Plugins/: GroupsPlugin.cs  ProjectPlugin.cs  RepositoryPlugin.cs  SubjectQueryPlugin.cs  UserEntitlementPlugin.cs  UsersPlugin.cs
src/backend/dotnet/AzureDevOpsAI.Backend/Resources/: system-prompt.txt
src/backend/dotnet/AzureDevOpsAI.Backend/Services/: AIService.cs  AzureDevOpsApiService.cs  AzureDevOpsDescriptorService.cs  ChatHistoryReducerService.cs  CosmosDbService.cs  UserAuthenticationContext.cs
src/backend/python/: Dockerfile  pyproject.toml  validate_telemetry.py
src/backend/python/app/: __init__.py
src/backend/python/app/api/: chat.py
src/backend/python/app/core/: config.py  telemetry.py
src/backend/python/app/models/: projects.py  workitems.py
src/backend/python/tests/: test_telemetry.py
src/backend/tests/: __init__.py  conftest.py  test_main.py
src/frontend/: .dockerignore  .env.test  =0.23.0  Dockerfile  JWT_SCOPE_FIX_RESOLUTION.md  JWT_SCOPE_FIX_SUMMARY.md  README.md  SPLIT_TOKEN_IMPLEMENTATION.md  app.py  config.py  demo.py  eslint.config.mjs  jest.config.js  jest.env.js  jest.setup.ts  next.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
src/frontend/__mocks__/: react-markdown.tsx  remark-gfm.ts
src/frontend/__tests__/: api-clientConfig.test.ts  auth-config.test.ts  components.test.tsx  comprehensive-jwt-scope-fix.test.ts  config.test.ts  conversation-id.test.ts  environment-variable-validation.test.ts  github-issue-jwt-scope-fix.test.ts  issue-224-runtime-scope-test.test.ts  issue-236-token-audience-fix.test.ts  jwt-scope-fix.test.ts  jwt-scope-requirements-e2e.test.ts  mfa-handler.test.ts  scope-caching-fix.test.ts  split-token-requests.test.ts  telemetry.test.ts  test-helpers.ts  use-auth-split-tokens.test.ts  use-client-config.test.ts
src/frontend/components/: __init__.py  auth.py  chat.py
src/frontend/services/: __init__.py  api_client.py  auth_service.py  telemetry.py
src/frontend/src/app/: layout.tsx  page.tsx
src/frontend/src/app/api/config/: route.ts
src/frontend/src/app/demo/: page.tsx
src/frontend/src/components/: Button.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  ClientLayout.tsx  ConfigStatus.tsx  Layout.tsx  Loading.tsx  LoginPage.tsx  ThoughtProcess.tsx
src/frontend/src/hooks/: use-auth.ts  use-chat.ts  use-client-config.ts  use-runtime-config.ts
src/frontend/src/lib/: auth-config.ts  config.ts  runtime-config.ts  telemetry.ts
src/frontend/src/services/: api-client.ts  mfa-handler.ts
src/frontend/src/types/: index.ts
src/frontend/static/css/: custom.css
src/frontend/tests/: test_auth_service.py  test_config.py
(+40 files in other folders)
